--- a/README
+++ b/README
@@ -1,21 +1,21 @@
-I'm very sorry for my code. But I can do only 
-this because there was no time. I hope, that next
+I'm very sorry for my code. But I can do
+this only because there was no time. I hope the next
 code will be better.
-And now about this program.
-It's game. You start with one ball and it 'run' on field.
-When ball concerns walls it changes self direction.
-You can move ball with mouse. The Ball will be where you click.
-On playing field are located 3 buttons:
-1) "Pause" -- pausing game, but "mousemoving" isn't pausing
-2) "Rating" -- show last 10 plays (name : seconds)
-3) "Add ball" -- about it next chapter.
-When you click to button "Add ball", real game is starting.
-You should control new ball with "WASD".
-When first ball concerns new, game is finishing.
-You shold your name, and you results turn out to be in rating table.
-Then you can see rating with pressing button "Rating"
-Note, real time starts when do you press "Add ball"
-Then you can only close the game and start again.
+And now about this application.
+It's a game. You start with one ball and it is 'running' on the field.
+When the ball touches walls it changes its direction.
+You can move the ball with the mouse. The Ball will be wherever you are clicking.
+On the playing field 3 buttons are located:
+1) "Pause" -- pausing game but "mousemoving" isn't pausing
+2) "Rating" -- shows last 10 plays (name : seconds)
+3) "Add ball" -- the next chapter describes it.
+When clicking the button "Add ball", the real game is starting.
+The new ball you should control with "WASD".
+When the first ball is touching the new one the game is finishing.
+You should enter your name and your results turn out to be in the rating table.
+Then you can see the rating by pressing the button "Rating"
+Note: the real time starts when pressing "Add ball"
+Then you can only close the game and start it again.
                     Have fun!
                     
                     
